--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Listing offers</h2>
+<h2>Listing Offers</h2>
  
 <%= link_to 'New offer', new_offer_path %>
 <table>
@@ -18,6 +18,9 @@
       <td><%= offer.description %></td>
       <td><%= link_to 'Show', offer_path(offer) %></td>
       <td><%= link_to 'Edit', edit_offer_path(offer) %></td>
+            <td><%= link_to 'Delete', offer_path(offer),
+                    method: :delete,
+                    data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
