S003 link to list of all vendors available, on welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
 <h1>VERSCHENKEN STATT WEGWERFEN</h1>
 
 <%= link_to 'All Offers', controller: 'offers' %>
+<%= link_to 'All Vendors', controller: 'vendors' %>
+
 
