--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -11,6 +11,10 @@
   <%= @offer.zipcode %>
 </p>
 <p>
+  <strong>District:</strong>
+  <%= @offer.district %>
+</p>
+<p>
   <strong>Description:</strong>
   <%= @offer.description %>
 </p>
