Association with mistake

--- a/app/views/offers/_form.html.erb
+++ b/app/views/offers/_form.html.erb
@@ -21,7 +21,8 @@
 
   <p>
     <%= form.label :category %><br>
-    <%= form.select :category, ['Books', 'Clothes', 'Furniture', 'Other']%>
+    <% categories_array = Category.all.map { |category| [category.name, category.id] } %>
+    <%= form.select(:category, options_for_select(categories_array)) %>
   </p>
   <p>
     <%= form.label :zipcode %><br>
