--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -3,10 +3,13 @@
   <%= @offer.title %>
 </p>
 <p>
+<strong>Category: </strong>
+<%= link_to @offer.category.name %><br />
+</p>
+<p>
   <strong>Zip Code:</strong>
   <%= @offer.zipcode %>
 </p>
-<p>
   <strong>District:</strong>
   <%= @offer.district %>
 </p>
@@ -14,6 +17,4 @@
   <strong>Description:</strong>
   <%= @offer.description %>
 </p>
-
-<%= link_to 'Edit', edit_offer_path(@offer) %> |
-<%= link_to 'Back', offers_path %>
+<%= link_to 'Back', {:action => 'index'} %>
