--- a/app/views/offers/edit.html.erb
+++ b/app/views/offers/edit.html.erb
@@ -1,7 +1,15 @@
 <h1>Edit Offer</h1>
-<h1>Edit Offer</h1>
- 
 
-<%= render 'form' %>
- 
-<%= link_to 'Back', offers_path %>
+<%= form_for @offer, :url =>{:action => "update", :id =>@offer} do |f| %>
+
+<p>Title: <%= f.text_field 'title' %></p>
+<p>Category: <%= f.collection_select :category_id, Category.all, :id, :name %></p>
+<p>Zipcode: <%= f.text_field  'zipcode' %></p>
+<p>District: <%= f.text_field  'district' %></p>
+<p>Description<br/>
+<%= f.text_area 'description' %></p>
+<p>
+<%= f.submit "Save changes" %>
+</p>
+<% end %>
+<%= link_to 'Back', {:action => 'index' } %>
