--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                        </li>
                        <% if current_user %>
                        <li class="nav-item">
-                         <%= link_to 'Offers', offer_path, class: 'nav-link' %>
+                         <%= link_to 'Offers', offers_path, class: 'nav-link' %>
                        </li>
                        <li class="nav-item">
                          <%= link_to 'Vendors', vendors_path, class: 'nav-link' %>
@@ -50,6 +50,11 @@
                          <% end %>
                        </li>
                      </ul>
-                   </nav>
-  </body>
+              </nav>
+           </header>
+           <main>
+                  <%= yield %>
+           </main>
+  </div>
+ </body>
 </html>
