--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,50 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+ <body class = "container">
+    <% if notice.present? %>
+      <aside class = "alert alert-info">
+        <%= notice %>
+      </aside>
+    <% end %>
+    <% if alert.present? %>
+      <aside class = "alert alert-danger">
+        <%= alert %>
+      </aside>
+    <% end %>
+
+
+  <div class="container">
+           <header class="header clearfix">
+              <nav>
+                     <!-- active
+                     <span class="sr-only">(current)</span>
+                     -->
+                     <ul class="nav nav-pills float-right">
+                       <li class="nav-item">
+                         <%= link_to 'Offers', offers_path, class: 'nav-link' %>
+                       </li>
+                       <% if current_user %>
+                       <li class="nav-item">
+                         <%= link_to 'Vendors', vendors_path, class: 'nav-link' %>
+                       </li>
+                       <% end %>
+                       <li class="nav-item">
+                         <a class="nav-link" href="#">About</a>
+                       </li>
+                       <li class="nav-item">
+                         <% if current_user %>
+                            <%= link_to "Log Out", destroy_user_session_path, class: 'nav-link', method: :delete %>
+                         <% else %>
+                            <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+                         <% end %>
+                       </li>
+                     </ul>
+              </nav>
+           </header>
+           <main>
+                  <%= yield %>
+           </main>
+  </div>
+ </body>
 </html>
