--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,3 +1,4 @@
+<p id="notice">Notice: <%= notice %> <%= flash.inspect %></p>
 <% if @offers.blank? %>
 <p>There are not any offers currently in the system.</p>
 <% else %>
