--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,9 +1,48 @@
 <% if @offers.blank? %>
 <p>There are not any offers currently in the system.</p>
 <% else %>
-<p>These are the current offers in our system</p>
+<h1 class="h2">Offers</h1></br>
 
+<section class="search-form">
+    <%= form_for :offers, method: :get do |f| %>
+        <div class="input-group input-group-lg">
+            <%= label_tag :keywords, nil, class: "sr-only" %>
+            <%= text_field_tag :keywords, nil,
+                placeholder: "Title or Zipcode",
+                    class: "form-control input-lg"%>
+            <span class= "input-group-btn">
+                <%= submit_tag "Find Offers", class: "btn btn-primary btn-lg" %>
+            </span>
+        </div>
+    <% end %>
+</section>
 
+<section class= "search-results">
+    <header>
+        </br></br>
+        <h2 class="h3">Search Results</h2>
+    </header>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Category</th>
+                <th>Zipcode</th>
+                <th>District</th>
+            </tr>
+        </thead>
+        <tbody>
+        <% @offers.each do |offer| %>
+            <tr>
+                <td><%= offer.title %></td>
+                <td><%= offer.category_id %></td>
+                <td><%= offer.zipcode %></td>
+                <td><%= offer.district %></td>
+            </tr>
+        <%end%>
+        </tbody>
+    </table></br></br>
+</section>
 
 <ul id = "offers">
    <% @offers.each do |offer| %>
