--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -25,10 +25,12 @@
     <ol class="list-group">
         <% @offers.each do |offer| %>
             <li class="list-group-item clearfix">
-                <h2><%= offer.title %></h2>
+                <h3 class="pull-right">
+                    <small class="text-uppercase">Offered</small>
+                    <%= l offer.created_at.to_date %></h3>
+                <h2 class="h3"><%= offer.title %></h2>
                 <h3><%= offer.zipcode %> <%= offer.district %></h3>
-                <h4>offered <%= offer.created_at.to_date %></h4>
-                <h5><%= offer.category_id %></h5>
+                <h4><%= offer.category_id %></h5>
             </li>
         <% end %>
         </ol>
